remctl (2.13-1) unstable; urgency=low

  * New upstream release.
    - New PHP PECL bindings for libremctl (php5-remctl).
    - Add support for ACL methods to the remctld server.
    - Add the deny ACL method to reject authentication by certain users.
    - Add the princ ACL method, allowing direct specification of
      particular principals in the main configuration file.
    - When processing the include of a directory for configuration or ACL
      files, limit the files included to characters in [a-zA-Z0-9_-] to
      avoid editor temporary files.  (Closes: #479481)
  * On new installations of remctl-server, add the inetd.conf line with
    the symbolic protocol name rather than the port number.  Depend on a
    new enough version of netbase.  Remove that line in prerm.

 -- Russ Allbery <rra@debian.org>  Mon, 22 Sep 2008 01:33:55 -0700

remctl (2.12-1) unstable; urgency=low

  * New upstream release.
    - Allow the GSS-API library to do hostname canonicalization if no
      server principal was specified in the client.
    - Document the client's choice of default server principal.
    - Fix an exit rather than error in the client library after an out of
      memory error.
    - Close file descriptors in the server when spawning children.
    - Fix Perl API interface for requesting the default principal.
    - Fix test suite failure when DNS lookups fail.  Thanks, Lucas
      Nussbaum.  (Closes: #467590)
  * Use touch $@ to create stamp files.
  * Rewrite debian/copyright based on the upstream LICENSE file.
  * Bump the watch version to 3.

 -- Russ Allbery <rra@debian.org>  Fri, 04 Apr 2008 22:24:07 -0700

remctl (2.11-3) unstable; urgency=low

  * Add the correct Perl dependencies for libnet-remctl-perl.
  * Really rebuild the Perl module to remove an unnecessary libgssapi_krb5
    dependency.
  * Update standards version to 3.7.3 (no changes required).

 -- Russ Allbery <rra@debian.org>  Mon, 28 Jan 2008 11:26:27 -0800
